# Malicent

./: README.md  pyproject.toml  tool
malicent/: __init__.py  cli.py  engine.py
malicent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_engine.py
