[project]
name = "malicent"
version = "0.1.0"
description = "A transaction sweep engine that invests rounded-up amounts into DSE bonds and distributes fees to Mugamaru."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
classifiers = [
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License"
]
dependencies = []

[project.scripts]
malicent = "malicent.cli:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
